--- a/quotable/quotable.console/quotable.console.csproj
+++ b/quotable/quotable.console/quotable.console.csproj
@@ -1,11 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+    <DocumentationFile>H:\cs480b\quotable\quotable.console\quotable.console.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
-    <ProjectReference Include = "../quotable.core/quotable.core.csproj" />
+    <ProjectReference Include="../quotable.core/quotable.core.csproj" />
   </ItemGroup>
 </Project>
